[metadata]
# replace with your username:
name = gitcompare
version = 0.0.1
author = Anirudh Vaish
author_email = anirudhvaish147@gmail.com
description = A python based command line tool to compare Github Users or Repositories 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/avaish1409/gitcompare
project_urls =
    Bug Tracker = https://github.com/avaish1409/gitcompare/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = gitcompare
packages = find:
python_requires = >=3

[options.packages.find]
where = gitcompare
